# gomi

./: CMakeLists.txt  resource.xml
src/: MainWindow.cc  MainWindow.hh  UtilWidget.hh  main.cc
ui/: mainwindow.glade
